--- a/index.html
+++ b/index.html
@@ -10,7 +10,30 @@
 		<div class="card">
 			<div class="search">
 				<input type="text" placeholder="Enter City name" spellcheck="false" />
-				<button><img src="weather-app-img/images/search.png" alt="" /></button>
+				<button><img src="weather-app-img/images/search.png" /></button>
+			</div>
+			<div class="weather">
+				<img src="weather-app-img/images/rain.png" class="weather-icon" />
+				<h1 class="temp">22°c</h1>
+				<h2 class="city">New York</h2>
+				<div class="details">
+					<!-- HUMIDITY -->
+					<div class="col">
+						<img src="weather-app-img/images/humidity.png" />
+						<div>
+							<p class="humidity">50%</p>
+							<p>Humidity</p>
+						</div>
+					</div>
+					<!-- WIND -->
+					<div class="col">
+						<img src="weather-app-img/images/wind.png" />
+						<div>
+							<p class="wind">15km/h</p>
+							<p>Wind Speed</p>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</body>
